# brain-ground-zero

./: .gitignore  CLAIMS.md  CONTEXT.md  IMPLEMENTATION_STRATEGY.md  README.md  SHARE_MESSAGE.md  STATUS.md  TASK.md  baseline_matrix.md  benchmark_spec.md  execution_plan.md  milestones.md  pyproject.toml  recorded_session_spec.md  scoring.md  task_schema.md  world_schema.md
configs/baselines/: all.yaml
configs/families/: recurring_workflows.yaml  recurring_workflows_proof.yaml  relational_drift.yaml  sparse_feedback.yaml
configs/systems/: default.yaml
proof-results/: README.md
proof-results/publishable/: README.md  site_blog_paper_starter.md
proof-results/recorded_h2h_relational_drift_001/: README.md  fixture.yaml  metadata.yaml  publishable_key_results.csv  publishable_key_results.md  publishable_key_results_compact.csv  publishable_key_results_compact.md  summary.json
proof-results/recorded_h2h_relational_drift_10seed/: README.md  config_snapshot.json  leaderboard.csv  leaderboard.md  multiseed_validation.txt  pairwise_accuracy_delta.csv  pairwise_accuracy_delta.md  per_seed_accuracy_matrix.csv  (+18 more)
recorded_sessions/: README.md
scripts/: convert_openclaw_trace_to_fixture.py  generate_publishable_proof_assets.py  init_recorded_session_bundle.py  run_recorded_h2h_proof.sh  run_recorded_h2h_relational_drift_proof.sh  run_recurring_workflows_proof.sh  run_sparse_feedback_proof.sh  smoke.sh  validate_configs.py  validate_fixture.py  validate_openclaw_trace.py  validate_recorded_h2h.py  validate_recorded_h2h_multiseed.py  validate_recorded_session_bundle.py
(+337 files in other folders)
